Kubernetes/istio/istio-manifests/service/orderservice-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: orderservice-v1
spec:
 replicas: 1
 selector:
   matchLabels:
     app: orderservice
 template:
   metadata:
     labels:
       app: orderservice
       version: v1
   spec:
     containers:
     - name: order-svc
       image: beomsun22/orderservice
       ports:
       - containerPort: 8080
       livenessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 5
          periodSeconds: 5
       readinessProbe:
          httpGet:
            path: /readiness
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 15
       resources:
          requests:
            cpu: 200m
            memory: 180Mi
          limits:
            cpu: 300m
            memory: 300Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: orderservice-v2
spec:
 replicas: 1
 selector:
   matchLabels:
     app: orderservice
 template:
   metadata:
     labels:
       app: orderservice
       version: v2
   spec:
     containers:
     - name: order-svc
       image: beomsun22/orderservice
       ports:
       - containerPort: 8080
       livenessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 5
          periodSeconds: 5
       readinessProbe:
          httpGet:
            path: /readiness
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 15
       resources:
          requests:
            cpu: 200m
            memory: 180Mi
          limits:
            cpu: 300m
            memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
 name: orderservice
spec:
 ports:
   - port: 8080
     targetPort: 8080
     name: http
 selector:
   app: orderservice
